[PRODDEV-160][PRODDEV-161] Fix the top menu placement and the overflow issue on a video page

--- a/js/gated-content/src/scss/views/_video-page.scss
+++ b/js/gated-content/src/scss/views/_video-page.scss
@@ -43,7 +43,6 @@
 
     .video-footer {
       display:            grid;
-      grid-template-rows: repeat(10, auto);
 
       @include median(grid-template-columns, 65% 35%, 65% 35%, 1fr);
 
@@ -54,13 +53,14 @@
       }
 
       .video-footer__fav {
+        grid-row:    2;
         display:     flex;
         align-items: center;
       }
 
       > div:nth-child(3) {
         @include median(grid-column, 2, 2, 1);
-        @include median(grid-row-start, 1, 1, initial);
+        @include median(grid-row-start, 1, 1, 3);
         @include median(grid-row-end, -1, -1, initial);
         @include median(padding-bottom, null, null, 20px);
 
@@ -71,6 +71,9 @@
         }
       }
 
+      > div:nth-child(4) {
+        @include median(grid-row, 3, 3, 4);
+      }
 
       .video-footer__block {
         display:     flex;
